# receipt-recognition

./:  .pre-commit-config.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: docker_push_to_container_registry.yml  workflow.yml
app/: text_to_sum.py  total_from_receipt.py
data/: total_synonyms.txt
data/texts/: receipt_one.txt  receipt_three.txt  receipt_two.txt
receipts/: api.py  text_to_sum.py  total_from_receipt.py
research/: check_img_to_text.ipynb  check_img_to_text.py  img_to_text.ipynb
tests/: conftest.py  test_generate_synonyms_list.py  test_total_from_receipt.py
